# autoFed

./: .env.example  .gitignore  LICENSE  README.md  autofed_spec.docx  pyproject.toml
.github/workflows/: ci.yml
config/: economy.yaml
src/autofed/: __init__.py  __main__.py  cli.py  monte_carlo.py
src/autofed/accounting/: __init__.py  balance_sheet.py  journal.py  ledger.py  sqlite_log.py  transaction.py
src/autofed/agents/: __init__.py  backend.py  batching.py  expectations.py  llm_stub.py  persona.py  plan.py
src/autofed/agents/oasis/: __init__.py  backend.py  client.py  schemas.py
src/autofed/banking/: __init__.py  layer.py
src/autofed/config/: __init__.py  loader.py
src/autofed/engine/: __init__.py  phases.py  tick.py
src/autofed/equity/: __init__.py  cap_table.py
src/autofed/markets/: __init__.py  clearing.py
src/autofed/observability/: __init__.py  dashboard.py  export.py  snapshots.py
src/autofed/social/: __init__.py  feed.py  graph.py
src/autofed/world/: __init__.py  central_bank.py  firm.py  firm_lifecycle.py  oasis_config.py  patches.py  production.py  state.py
tests/: test_agent_personas.py  test_balance_sheet.py  test_config_and_production.py  test_economy_patches.py  test_engine.py  test_extensions.py  test_firm_lifecycle.py  test_journal.py  test_ledger.py  test_markets_clearing.py  test_monte_carlo_cli.py  test_oasis_backend.py  test_oasis_schema.py  test_snapshots.py  test_social_expectations.py  test_sqlite_log.py  test_yaml_long_run.py
