[project]
name = "autofed"
version = "0.2.1"
description = "LLM-driven macro simulation with stock-flow-consistent accounting"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kevin O'Connor" }]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6.0"]
dashboard = ["streamlit>=1.28.0", "pandas>=2.0.0"]

[project.scripts]
autofed = "autofed.cli:main"
autofed-dashboard = "autofed.observability.dashboard:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
